--- a/resources/control-panel.css
+++ b/resources/control-panel.css
@@ -120,17 +120,11 @@ body {
 }
 
 /* Type */
-.control-panel .logo {
-   margin-bottom: 0.8rem;
-   height: 24px;
-   margin-bottom: 0.8rem;
-}
-
-.control-panel .em-dash {
-   width: 25px;
-   background-color: #222;
-   height: 2px;
-   margin-bottom: 0.8rem;
+.control-panel h1 {
+   font-family: "Domaine";
+   font-size: 24px;
+   margin-bottom: 0.5rem;
+   line-height: 1.4;
 }
 
 /* set type color */
