--- a/resources/control-panel.css
+++ b/resources/control-panel.css
@@ -6,7 +6,7 @@
   --color-canvas: #F4F4F4;
   --color-light-grey: #CCC;
   --color-mid-grey: #999;
-  --color-blue: var(--color-blue);
+  --color-blue: #;
 }
 
 html {
