--- a/resources/control-panel.css
+++ b/resources/control-panel.css
@@ -4,9 +4,10 @@
   --color-black: #222;
   --color-white: #FFF;
   --color-canvas: #F4F4F4;
+  --color-v-light-grey: #EEE;
   --color-light-grey: #CCC;
   --color-mid-grey: #999;
-  --color-blue: #;
+  --color-blue: #1432FF;
 }
 
 html {
@@ -253,14 +254,14 @@ output, input.alwaysOn {
 /* js classes */
 .cp-shift {
    transform: translateX(0px);
-   box-shadow: -6px 0px 35px #EEE;
+   box-shadow: -6px 0px 35px var(--color-v-light-grey);
 }
 
 .cp-shift-alert {
    transform: translateY(0px);
    /* transform: translateX(-50%); */
    /* left: 50% !important; */
-   box-shadow: 0px 0px 35px #EEE;
+   box-shadow: 0px 0px 35px var(--color-v-light-grey);
 }
 
 .active {
