--- a/resources/control-panel.css
+++ b/resources/control-panel.css
@@ -307,6 +307,9 @@ input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+input[type=number] {
+    -moz-appearance:textfield;
+}
 
 /* button styling */
 .button {
