--- a/resources/control-panel.css
+++ b/resources/control-panel.css
@@ -358,13 +358,20 @@ transition: all 0.3s ease;
 
 .tip-box {
    padding: 0.8rem 0 0.8rem 1rem;
-   border: 1px solid var(--color-v-light-grey);
+   /* border: 1px solid var(--color-v-light-grey); */
    border-radius: 3px;
    margin-top: 0.25rem;
    margin-bottom: 0.75rem;
    transform-origin: top;
    display: none;
-   transition: height 1s ease;
+   max-height: 0;
+   background-color: var(--color-canvas);
+   transition: max-height 1s ease-in;
+}
+
+.tip-message {
+   opacity: 0;
+   transition: opacity 1s ease;
 }
 
 .tip-box img {
@@ -388,11 +395,11 @@ transition: all 0.3s ease;
 }
 
 .tip-draw {
-   height: auto !important;
+   max-height: 500px;
 }
 
 .tip-message-show {
-   opacity: 1 !important;
+   opacity: 1;
 }
 
 
