added scale driven spacing between type levels

--- a/style.css
+++ b/style.css
@@ -6,23 +6,12 @@
 
 /* Header styling */
 .hero, .h1, .h2, .h3, .h4 {
-   font-family: "Bitter", serif;
+   font-family: "Roboto", serif;
 }
 
 /* Body styling */
 .body-big, .body, .body-small, .body-x-small {
-   font-family: "Open Sans", sans-serif;
+   font-family: "Roboto", sans-serif;
 }
-
-/* line-height */
-.hero {line-height: 1.2;}
-.h1 {line-height: 1.4;}
-.h2 {line-height: 1.55;}
-.h3 {line-height: 1.7;}
-.h4 {line-height: 1.9;}
-.body-big {line-height: 2;}
-.body {line-height: 2.1; margin-top: 0.4rem;}
-.body-small {line-height: 2.1; margin-top: 0.5rem;}
-.body-x-small {line-height: 2.1; margin-top: 0.5rem;}
 
 /* add your own layout rules here */
