--- a/resources/control-panel.css
+++ b/resources/control-panel.css
@@ -24,7 +24,7 @@ html {
 }
 
 .type-wrapper {
-   padding-top: 3rem;
+   padding-top: 2.5rem;
    /* resize: both;
    border: 2px solid; */
    /* overflow: auto; */
@@ -127,7 +127,6 @@ a {
 
 /* Type */
 .control-panel .logo {
-   margin-top: 0.8rem;
    margin-bottom: 1.2rem;
    height: 30px;
 }
@@ -164,13 +163,13 @@ a {
 }
 
 .control-panel hr {
-   margin-bottom: 1rem;
+   margin-bottom: 0.75rem;
    border-color: var(--color-light-grey);
    border-width: 1px;
 }
 
 .cp-panel .cp-form-block{
-   margin-top: 2rem;
+   margin-top: 1.5rem;
 }
 
 .cp-form {
@@ -207,7 +206,6 @@ a {
    opacity: 0.5;
 }
 
-
 .cp-form-block .break-title {
    margin-bottom: 1rem;
 }
@@ -220,9 +218,13 @@ a {
    display: none;
 }
 
+.cp-break-inputs {
+   margin-top: 0.3rem !important;
+}
+
 .control-panel input, output {
    background-color: var(--color-white);
-   margin-top: 0.2rem;
+   margin-bottom: 0.3rem;
    height: 22px;
    width: 40px;
    display: block;
