set all children inside info-button to not receive pointer events
We set the click handler on the button, but the ACTUAL clicked element
will be the path IN the svg IN the button. By using pointer-events: none
on all the children of the button, they will not respond to mouse
events. Hence the button element will show up as event.target

--- a/resources/control-panel.css
+++ b/resources/control-panel.css
@@ -427,5 +427,8 @@ transition: all 0.3s ease;
    height: 15px; /* matched to the sibling h4, we should fix this later */
 }
 
+.info-button * {
+   pointer-events: none;
+}
 
 /*  */
