Update comments in typography.css
Specifing that we are dealing with styles is not necessary. We are in a
.css file. So, by definition, we are dealing with styles.

Although `hero` is technically not a heading, it feels closer to a
heading than to a header. Because the rest are all headings, it is
marked as such

--- a/resources/styles/typography.css
+++ b/resources/styles/typography.css
@@ -3,12 +3,12 @@
   src: url('') format("woff2");
 }
 
-/* Header styling */
+/* Headings */
 .hero, .h1, .h2, .h3, .h4 {
   font-family: 'Bitter', serif;
 }
 
-/* Body styling */
+/* Body */
 .body-big, .body, .body-small, .body-x-small {
   font-family: 'Open Sans', sans-serif;
 }
