Move each selector to its own line
Although these selectors are quite small and the do fit on a line, it is
usually best to place them on seperate lines. When selectors become
larger / more complex, having them on its own line makes it more
readable. Since that will be the case later on, consistency is king and
we should start doing that right now

--- a/resources/styles/typography.css
+++ b/resources/styles/typography.css
@@ -4,11 +4,18 @@
 }
 
 /* Headings */
-.hero, .h1, .h2, .h3, .h4 {
+.hero,
+.h1,
+.h2,
+.h3,
+.h4 {
   font-family: 'Bitter', serif;
 }
 
 /* Body */
-.body-big, .body, .body-small, .body-x-small {
+.body-big,
+.body,
+.body-small,
+.body-x-small {
   font-family: 'Open Sans', sans-serif;
 }
