--- a/resources/styles/typography.css
+++ b/resources/styles/typography.css
@@ -1,3 +1,15 @@
+body {
+  font-family: "Open Sans", "sans-serif";
+}
+
+strong {
+  font-weight: 600;
+}
+
+b {
+  font-weight: 600;
+}
+
 /* Headings */
 .hero,
 .h1,
