Add a semicolon to a rule in control-panel.css
In css you need to explicitly close a rule. Otherwise the css is not
valid

--- a/resources/control-panel.css
+++ b/resources/control-panel.css
@@ -33,7 +33,7 @@
 
 /* fixing cp-panel inside cp block in order to enamble scrolling */
 .cp-panel {
-   position: fixed
+   position: fixed;
    top: 0;
    padding-top: 2.2rem;
    padding-right: 2rem;
