Toggle the control panel with data attributes
We set the state of the control panel via javascript. In this case via
the data-control-panel="open" or "close" attribute. It is convention to
use data attributes over classes because now it it clear from the html
that these values are modified by JavaScript. Also if you look at the
css, you see which styles are controlled by javascript because of the
[data-*=""] syntax

Further more, we use an actual button instead of a div. This way we get
keyboard interactivity for free! (once we apply focus styling...)

note that I did include the javascript file, in this commit, but it is
not used yet. In a future commit this will be include.

--- a/resources/components/control-panel.css
+++ b/resources/components/control-panel.css
@@ -54,12 +54,24 @@
    z-index: 3;
    background-color: var(--color-white);
    transition: all 0.3s ease;
+   border: none;
+   cursor: pointer;
 }
 
-.cp-button img {
+.cp-button:focus {
+  outline: none; /* TODO: add proper focus state */
+}
+
+[data-control-panel] .cp-button__img {
    padding-top: 1.3rem;
    padding-left: 0.25rem;
-   transform: rotate(-45deg);
+   transform: rotate(-45deg) translate(-6px, -5px);
+   display: none;
+}
+
+[data-control-panel="open"] .cp-button__img--open,
+[data-control-panel="close"] .cp-button__img--close {
+  display: block;
 }
 
 .cp-button:hover {
@@ -203,8 +215,8 @@ input.alwaysOn {
    margin-top: 0;
 }
 
-/* js classes */
-.cp-shift {
+/* js attributes */
+[data-control-panel="open"] {
    transform: translateX(0px);
    box-shadow: -6px 0px 35px var(--color-v-light-grey);
 }
