Generate the breakpoint icons and inputs via JavaScript
For the same reason we generate all breakpoint-dependent controls via
JavaScript, if the user adds a breakpoint we need to manage the DOM, we do the same
for these. The added function takes two wrappers, each get filled with the icons and inputs.

Notice that we can reuse the function to highlight the active
breakpoint!

In the CSS we show/hide the images depending on the data attributes
which are set via JavaScript.

--- a/resources/components/control-panel.css
+++ b/resources/components/control-panel.css
@@ -156,10 +156,10 @@ output {
    margin: 0 3px;
 }
 .cp-break-wrapper .divider {
-   height: 12px;
-   width: 2px;
-   background-color: var(--color-black);
-   opacity: 0.5;
+  height: 12px;
+  width: 2px;
+  background-color: var(--color-black);
+  opacity: 0.5;
 }
 
 .cp-form-block .break-title {
@@ -175,8 +175,20 @@ output {
    display: none;
 }
 
-.cp-break-inputs {
+.cp-break-wrapper--icons img[data-is-filled="true"],
+.cp-break-wrapper--icons img[data-is-filled="false"][data-active="true"] {
+  display: none;
+}
+.cp-break-wrapper--icons img[data-is-filled="true"][data-active="true"] {
+  display: block;
+}
+
+.cp-break-wrapper--inputs {
    margin-top: 0.3rem !important;
+}
+
+.cp-break-wrapper--inputs input[data-active="true"] {
+  color: var(--color-blue);
 }
 
 .control-panel input,
