Toggle info panels on tooltip click

--- a/resources/components/button.css
+++ b/resources/components/button.css
@@ -13,3 +13,9 @@
     -ms-transform: scale(1.03);
         transform: scale(1.03);
 }
+
+[class*="button--info"] {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+}
